sidebar word wrap fix

--- a/site-app/src/App.css
+++ b/site-app/src/App.css
@@ -359,6 +359,8 @@ a:visited {
   text-transform: capitalize;
   text-shadow: 2px 2px 1px hsl(0deg, 0%, 15%);
   padding-inline: 1rem;
+  white-space: nowrap;
+  overflow: ellipsis;
 }
 
 .side-link:hover {
